--- a/index.html
+++ b/index.html
@@ -1,38 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="secure place for your file">
-    <meta name="description" content="best file management platform">
-    <link rel="stylesheet" href="css/main.css">
-    <title>FYLO / SECURE FILES</title>
-</head>
-<body>
-    <!---Navbar start-->
-     <nav>
-            <div class="logo">
-                <img src="images/logo.svg" alt="flyo official logo">
-            </div>
-            <div class="link">
-                <ul>
-                    <li><a href="#">Feature</a></li>
-                    <li><a href="#">Team</a></li>
-                    <li><a href="#">Sign in</a></li>
-                </ul>
-            </div>
-     </nav>
-     
-     <!---Navbar end-->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="secure place for your file" />
+    <meta name="description" content="best file management platform" />
+    <link rel="stylesheet" href="css/main.css" />
+    <script
+      src="https://kit.fontawesome.com/20caaf4113.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Flyo | Secure files</title>
+  </head>
+  <body>
+    <!---Navigation bar start-->
+    <nav>
+      <div class="logo">
+        <img src="images/logo.svg" alt="flyo official logo" />
+      </div>
+      <div class="links">
+        <ul>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Sign in</a></li>
+        </ul>
+      </div>
+    </nav>
+    <!---Navigation bar end-->
+    <main>
+      <section class="hero-section">
+        <div class="illustration-container">
+          <img
+              src="images/illustration-intro.png">
+        </div>
+        
 
-     <section class="hero-sectio">
-         <div class="illustration-container">
-              <img src="images/illustration-intro.png" alt="All files in one secure location illustration">  
-         </div>
-         <h1>All your files in one secure location, accessible anywhere.</h1>
-         <p>Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
-     </section>
-</body>
+        <!-- <div class="illustration-container">
+          <div class="first-content">
+            <img
+              class="illustration-img"
+              src="images/illustration-intro.png"
+              alt="All your files in one secure location illustration"
+            />
+            <h1>All your files in one secure location, accessible anywhere.</h1>
+          </div>
+        </div> -->
+<!-- 
+        <div class="second-content">
+          <p>
+            Fylo stores all your most important files in one secure location.
+            Access them wherever you need, share and collaborate with friends
+            family, and co-workers.
+          </p>
+          <button class="hero-btn">Get Started</button>
+        </div> -->
+      </section>
+    </main>
+  </body>
 </html>
-
