--- a/index.html
+++ b/index.html
@@ -35,31 +35,78 @@
     <main>
       <section class="hero-section">
         <div class="illustration-container">
-          <img
-              src="images/illustration-intro.png">
+          <img src="images/illustration-intro.png" />
         </div>
-        
 
-        <!-- <div class="illustration-container">
-          <div class="first-content">
-            <img
-              class="illustration-img"
-              src="images/illustration-intro.png"
-              alt="All your files in one secure location illustration"
-            />
-            <h1>All your files in one secure location, accessible anywhere.</h1>
-          </div>
-        </div> -->
-<!-- 
-        <div class="second-content">
+        <div class="hero-content">
+          <h1>All your files in one secure location, accessible anywhere.</h1>
           <p>
             Fylo stores all your most important files in one secure location.
             Access them wherever you need, share and collaborate with friends
             family, and co-workers.
           </p>
           <button class="hero-btn">Get Started</button>
-        </div> -->
+        </div>
       </section>
+
+      <!-- OFFER SECTION STARTS -->
+      <section class="offer">
+
+        <!-- START ACCESS CONTAINER -->
+        <div class="access">
+          <img
+            src="images/icon-access-anywhere.svg"
+            alt="Access your files everywhere"
+          />
+          <h2>Access your files, anywhere</h2>
+          <p>
+            The ability to use a smartphone, tablet, or computer to access your
+            account means your files follow you everywhere.
+          </p>
+        </div>
+        <!-- END ACCESS CONTAINER -->
+
+        <!--START SECURITY CONTAINER -->
+        <div class="security">
+          <img
+            src="images/icon-security.svg"
+            alt="Security you can trust"
+          />
+          <h2>Security you can trust</h2>
+          <p>
+            2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files. 
+          </p>
+        </div>
+        <!-- END SECURITY CONTAINER -->
+
+        <!-- START COLLABORATION CONTAINER -->
+        <div class="collaborate">
+          <img
+            src="images/icon-collaboration.svg"
+            alt="Real-time collaboration"
+          />
+          <h2>Real-time collaboration</h2>
+          <p>
+            Securely share files and folders with friends, family and colleagues for live collaboration. no email attachments required.
+          </p>
+        </div>
+        <!-- END COLABORATION CONTAINER -->
+
+
+        <!--START STORE CONTAINER  -->
+        <div class="store">
+          <img
+            src="images/icon-any-file.svg"
+            alt="Store any type of file"
+          />
+          <h2>Store any type of file</h2>
+          <p>
+            Whether you're sharing holiday photos or work docments, Flyo has you covered allowing for all file types to be securely stored and shared.
+          </p>
+        </div>
+        <!-- END STORE CONTAINER -->
+      </section>
+      <!-- OFFER SECTION ENDS -->
     </main>
   </body>
 </html>
